Changes from version 0.7.0-pre1 to 0.7.1-pre2
- Fixed HttpPost problem (https://www.rrette.com/pipermail/curlpp/2007-February/000273.html)
  (Thanks to Gazi Alankus)

Changes from version 0.7.0 to 0.7.1-pre1
- Fixed Functor arguments binding.
- Enabled example 10.
- Added make_functor function (see example10).
- WriteData is now called WriteFile.
- Disabled buggy WriteStream.
- Added boost.function (http://www.boost.org) feature.
- Added example17 (binded method functor).
- Added example18 (boost binded method function).

Changes from version 0.7.0-pre2 to 0.7.0
- Added some missing options (some unavailable CURLOPT) (thanks to Armel Asselin)
- Fixed Options for Quote/PreQuote/PostQuote (was long, now is std::list<std::string>). (thanks to Armel Asselin)
- Added cURLpp::Easy::reset. (thanks to Armel Asselin)
- Fixed wrong cURLpp::Easy::InfoGetter declaration (struct/class mix). (thanks to Armel Asselin)
- Added implementation for long and double Info. (thanks to Armel Asselin)
- cURLpp::Multi removes the easy handles remaining inside itself when destroyed (allows nice handling of exceptions when a Multi is involved). (thanks to Armel Asselin)
- Added example 16.

Changes from version 0.7.0-pre1 to 0.7.0-pre2
- Added the NotAvailable feature. If CURLPP_ALLOW_NOT_AVAILABLE is 
  defined, it allow us to compile code not available for the current
  libcURL version.  
- Added the NoValueOptionTrait. This will allow options with no values,
  as CURLOPT_SSLENGINE_DEFAULT, for instance.
- Fixed the missing msvc makefiles in source distribution.
- Fixed some gcc 3.2 compilation fixes (MaHo)
- Updated MSVC makefiles for new examples and for Multi integration.
- Better Multi interface error handling.

Changes from version 0.6.1 to 0.7.0-pre1
- Added Multi interface

Changes from version 0.6.0 to 0.6.1
- automake-1.9 is now required for the AMD64 aclocal changes
- Some libcURL version check added for Infos.hpp 

Changes from version 0.6.0-pre5 to 0.6.0
- SList bug fixed.
